--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,9 +12,11 @@
 									<span class="">English</span>
 									<span class="fa fa-angle-down"></span>
 								</a>
-								<ul class="dropdown-menu">
-									<li><a href="index.html"><img class="image_flag" src="assets/image/demo/flags/gb.png" alt="English" title="English" /> English </a></li>
-									<li> <a href="index.html"> <img class="image_flag" src="assets/image/demo/flags/lb.png" alt="Arabic" title="Arabic" /> Arabic </a> </li>
+								<ul class="dropdown-menu" *ngFor="let leftItems of topleftItems">
+									<li *ngFor="let subTofleftItems of leftItems.lists.list">
+										<a href="https://{{subTofleftItems.clickurl}}">
+										<img class="image_flag" src="{{subTofleftItems.icon}}" alt="{{subTofleftItems.name}}" title="{{subTofleftItems.name}}" /> {{subTofleftItems.name}} </a>
+									</li>
 								</ul>
 							</form>
 						</div>
@@ -36,11 +38,10 @@
 						<h5 class="tabBlockTitle visible-xs">More<a class="expander " href="#TabBlock-1"><i class="fa fa-angle-down"></i></a></h5>
 						<div class="tabBlock" id="TabBlock-1">
 							<ul class="top-link list-inline">
-								<li class="account" id="my_account"><a href="my-account.html" title="My Account" class="btn btn-xs dropdown-toggle" > <i class="fa fa-user" ></i> My Account </a></li>
-								<li class="wishlist"><a href="wishlist.html" class="top-link-wishlist" title="wishlist"><i class="fa fa-heart" ></i> My Wish List</a></li>
-								<li class="checkout"><a href="checkout.html" class="top-link-checkout" title="Checkout"><i class="fa fa-check-square-o" ></i> Checkout</a></li>
-								<li class="signin"><a href="login.html" class="top-link-checkout" title="login"><i class="fa fa-lock" ></i> Sign In</a></li>
-								
+								<li *ngFor="let rightMainItems of topRightItems" class="account" id="my_account">
+									<a  href="{{rightMainItems.clickurl}}" title="{{rightMainItems.name}}" class="btn btn-xs dropdown-toggle" >
+										 <i class="fa" [ngClass]="{'fa-lock': rightMainItems.name === 'Login', 'fa-user': rightMainItems.name === 'Register', 'fa-heart': rightMainItems.name === 'My Wish List'}" ></i> {{rightMainItems.name}} </a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -55,7 +56,7 @@
 			<div class="row">
 				<!-- Logo -->
 				<div style="padding-top:5px;" class="navbar-logo col-md-3 col-sm-12 col-xs-12">
-						<a href="index.html"><img src="assets/image/demo/logos/Indiaglobe1_450x84.png" title="Your Store" alt="Your Store"></a>
+						<a href="{{mainLogo.clickurl}}"><img src="{{mainLogo.image}}" title="Your Store" alt="{{mainLogo.itemtype}}"></a>
 					</div>
 				<!-- //end Logo -->
 				<!-- Search -->
@@ -89,10 +90,12 @@
 					<!-- //Search -->
 				<!-- Main Menu -->
 					<div class="phone-contact col-md-2  hidden-md hidden-sm hidden-xs">
-							<div class="inner-info">
-								<strong>Call us Now:</strong><br>
-								<span>Toll free:  0123-456-789</span>
-							</div>
+							<a class="anchor-tag" href="{{mainRightCallNow.clickurl}}">
+							  <div class="inner-info">
+								  <strong>{{mainRightCallNow.boldtext}}</strong><br>
+								  <span>{{mainRightCallNow.lighttext}}</span>
+							  </div>
+							</a>
 					</div>
 					<!-- //Main Menu -->
 
@@ -103,8 +106,8 @@
 							<a data-loading-text="Loading..." class="top_cart dropdown-toggle" data-toggle="dropdown">
 								<div class="shopcart">
 									<span class="handle pull-left"></span>
-									<span class="title">Shopping Cart</span>
-									<p class="text-shopping-cart cart-total-full">2 item(s) - $1,262.00 </p>
+									<span class="title">{{mainRightShoppingCart.boldtext}}</span>
+									<p class="text-shopping-cart cart-total-full">{{mainRightShoppingCart.lighttext}}</p>
 								</div>
 							</a>
 
@@ -114,13 +117,13 @@
 										<tbody>
 											<tr>
 												<td class="text-center" style="width:70px">
-													<a href="product.html"> <img src="assets/image/demo/shop/product/resize/2.jpg" style="width:70px" alt="Filet Mign" title="Filet Mign" class="preview"> </a>
+													<a href="{{mainRightShoppingCart.clickurl}}"> <img src="assets/image/demo/shop/product/resize/2.jpg" style="width:70px" alt="Filet Mign" title="Filet Mign" class="preview"> </a>
 												</td>
-												<td class="text-left"> <a class="cart_product_name" href="product.html">Filet Mign</a> </td>
+												<td class="text-left"> <a class="cart_product_name" href="{{mainRightShoppingCart.clickurl}}">Filet Mign</a> </td>
 												<td class="text-center"> x1 </td>
 												<td class="text-center"> $1,202.00 </td>
 												<td class="text-right">
-													<a href="product.html" class="fa fa-edit"></a>
+													<a href="{{mainRightShoppingCart.clickurl}}" class="fa fa-edit"></a>
 												</td>
 												<td class="text-right">
 													<a onclick="cart.remove('2');" class="fa fa-times fa-delete"></a>
@@ -130,11 +133,11 @@
 												<td class="text-center" style="width:70px">
 													<a href="product.html"> <img src="assets/image/demo/shop/product/resize/3.jpg" style="width:70px" alt="Canon EOS 5D" title="Canon EOS 5D" class="preview"> </a>
 												</td>
-												<td class="text-left"> <a class="cart_product_name" href="product.html">Canon EOS 5D</a> </td>
+												<td class="text-left"> <a class="cart_product_name" href="{{mainRightShoppingCart.clickurl}}">Canon EOS 5D</a> </td>
 												<td class="text-center"> x1 </td>
 												<td class="text-center"> $60.00 </td>
 												<td class="text-right">
-													<a href="product.html" class="fa fa-edit"></a>
+													<a href="{{mainRightShoppingCart.clickurl}}" class="fa fa-edit"></a>
 												</td>
 												<td class="text-right">
 													<a onclick="cart.remove('1');" class="fa fa-times fa-delete"></a>
