--- a/src/app/home3/home3.component.html
+++ b/src/app/home3/home3.component.html
@@ -4,29 +4,21 @@
   <div class="container">
     <div class="row">
       <div id="yt_header_left" class="col-md-9 col-md-12">
-        <div class="slider-container "> 
-          <div id="so-slideshow" >
-            <div class="module navbar-category clearfix hidden-lg hidden-md">
-              <div class="navbar-header">
-                <button type="button" id="show-verticalmenu" data-toggle="collapse" class="navbar-toggle fa fa-list-alt"></button>
-                All Categories		
-              </div>
-            </div>
-            <div class="module ">
-              <div class="yt-content-slider yt-content-slider--arrow1"  data-autoplay="no" data-autoheight="no" data-delay="4" data-speed="0.6" data-margin="0" data-items_column0="1" data-items_column1="1" data-items_column2="1"  data-items_column3="1" data-items_column4="1" data-arrows="yes" data-pagination="no" data-lazyload="yes" data-loop="no" data-hoverpause="yes">
-                <div class="yt-content-slide" *ngFor="let slideitem of sliderResponse" >
-                  <div  *ngFor="let subslideitem of slideitem.sliders.slider">
-										<a href="https://s3-eu-west-1.amazonaws.com/{{subslideitem.linkurl}}">
-											<img src="https://s3-eu-west-1.amazonaws.com/{{subslideitem.imageurl}}" alt="slider1" class="img-responsive"></a></div> 
-                </div>
-              </div>
-              <div class="loadeding"></div>
-            </div>
-            
-          </div>
+					<div class="slideshow-container" *ngFor="let slideitem of sliderResponse">
 
-          
-        </div>
+							<div class="mySlides" *ngFor="let subslideitem of slideitem.sliders.slider ; let slideindex=index;">
+								<a (click)="onClick(subslideitem.advertitemcode)">
+								<img src="https://s3-eu-west-1.amazonaws.com/{{subslideitem.imageurl}}" style="width:100%">
+							</a>
+							</div>
+							<a class="prev" (click)="plusSlides(-1)">&#10094;</a>
+							<a class="next" (click)="plusSlides(1)">&#10095;</a>
+							
+							</div>
+							<br>
+							<div style="float:left;" *ngFor="let dummy of ' '.repeat(dotsLength).split(''), let x = index">
+								<span class="dot" (click)="currentSlide(x + 1)" ></span> 
+							</div>
       </div>
       <div id="yt_header_right" class="col-md-3 hidden-sm hidden-xs" *ngFor="let sidebarItem of sidebarResponse">
         <div class="module" *ngFor="let subsidebarItem of sidebarItem.sidebars.sidebar">
@@ -102,12 +94,12 @@
 												<!--Sale Label-->
 												<span class="label label-sale">-15%</span>
 												<!--full quick view block-->
-												<a class="quickview iframe-link visible-lg" data-fancybox-type="iframe" href="quickview.html">  Quickview</a>
+												<a class="quickview iframe-link visible-lg" data-fancybox-type="iframe" (click)="onClick(subRibbon2Item.advertitemcode)">  Quickview</a>
 												<!--end full quick view block-->
 											</div>
 											<div class="right-block">
 												<div class="caption">
-													<h4><a (click)="onClick(subRibbon2Item.advertitemcode)">Cupim Bris</a></h4>		
+													<h4><a >Cupim Bris</a></h4>		
 													<div class="ratings">
 														<div class="rating-box">
 															<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span>
@@ -137,9 +129,9 @@
 						</div>
 						<div class="owl2-controls">
 							<div class="owl2-nav">
-								<div class="owl2-prev" style="">
+								<div class="owl2-prev">
 								</div>
-								<div class="owl2-next" style="">
+								<div class="owl2-next" >
 								</div>
 							</div>
 							<div class="owl2-dots" style="display: none;">
@@ -193,7 +185,7 @@
                         </div>
                         
                         <!--full quick view block-->
-                        <a class="quickview iframe-link visible-lg" data-fancybox-type="iframe"  href="quickview.html">  Quickview</a>
+                        <a class="quickview iframe-link visible-lg" (click)="onClick(subRibbon1Item.advertitemcode)" data-fancybox-type="iframe" >  Quickview</a>
                         <!--end full quick view block-->
                       </div>
                     </div>
@@ -250,7 +242,7 @@
 													</div>
 													
 													<!--full quick view block-->
-													<a class="quickview iframe-link visible-lg" data-fancybox-type="iframe" href="quickview.html">  Quickview</a>
+													<a class="quickview iframe-link visible-lg" data-fancybox-type="iframe" (click)="onClick(subItemribbon3item.advertitemcode)">  Quickview</a>
 													<!--end full quick view block-->
 												</div>
 												<div class="right-block">
@@ -284,8 +276,8 @@
 									</div>
 										<div class="owl2-controls">
 											<div class="owl2-nav">
-												<div class="owl2-prev" style="">
-												</div><div class="owl2-next" style="">
+												<div class="owl2-prev">
+												</div><div class="owl2-next">
 												</div>
 											</div>
 											<div class="owl2-dots" style="display: none;"></div>
