--- a/src/app/home3/home3.component.html
+++ b/src/app/home3/home3.component.html
@@ -4,7 +4,18 @@
   <div class="container">
     <div class="row">
       <div id="yt_header_left" class="col-md-9 col-md-12">
-					<div class="slideshow-container" *ngFor="let slideitem of sliderResponse">
+		   <!-- You can now use your library component in app.component.html -->
+		   <div  *ngFor="let slideitem of sliderResponse">
+
+		   <ngx-slick class="carousel" #slickModal="slick-modal" [config]="slideConfig">
+				<div ngxSlickItem *ngFor="let subslideitem of slideitem.sliders.slider ; let slideindex=index;" class="slide">
+						<a (click)="onClick(subslideitem.advertitemcode)">
+					  <img src="https://s3-eu-west-1.amazonaws.com/{{subslideitem.imageurl}}" alt="" width="100%">
+					</a>
+				</div>
+			</ngx-slick>
+		   </div>
+					<!-- <div class="slideshow-container" >
 
 							<div class="mySlides" *ngFor="let subslideitem of slideitem.sliders.slider ; let slideindex=index;">
 								<a (click)="onClick(subslideitem.advertitemcode)">
@@ -18,7 +29,7 @@
 							<br>
 							<div style="float:left;" *ngFor="let dummy of ' '.repeat(dotsLength).split(''), let x = index">
 								<span class="dot" (click)="currentSlide(x + 1)" ></span> 
-							</div>
+							</div> -->
       </div>
       <div id="yt_header_right" class="col-md-3 hidden-sm hidden-xs" *ngFor="let sidebarItem of sidebarResponse">
         <div class="module" *ngFor="let subsidebarItem of sidebarItem.sidebars.sidebar">
